--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 				<tr><td>TUNJANGAN<td>:<input type="text" name="tunjangan1" disabled="">
 				<tr><td>TUNJANGAN LAMA KERJA<td>:<input type="text" name="tlk" disabled="">
 				<tr><td>TOTAL GAJI<td>:<input type="text" name="total" disabled="">
+				<tr><td>TOTAL GAJI<td>:<input type="text" name="total" disabled="">
 			</table>
 		</div>
 		<div class="w3-container w3-panel w3-purple">
